fix: set z-index on card search float menu

--- a/src/components/card-list/card-search.module.css
+++ b/src/components/card-list/card-search.module.css
@@ -40,6 +40,7 @@
   transition-behavior: allow-discrete;
   display: flex;
   visibility: hidden;
+  z-index: 2;
 }
 
 .container:focus-within .flags {
